<resources>
    <string name="app_name">p2c1</string>
    <string name="tvSaludo">Hola Mundo!</string>
    <string name="btnSaludo">Click para Saludar</string>
    <string name="btnCrearDb">Crear DB</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="hint_email">Email</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnCrearRegistro">Crear Registro</string>
    <string name="btnCrearDB">Crear Base de Datos</string>
    <string name="tvDatosPersonales">Marvin Alexander Cámbara Alonzo 0905-23-17848</string>
    <string name="btn_regresar">Regrear al Main</string>
</resources>