<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Botón Crear Registro -->
    <Button
        android:id="@+id/btnCrearRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCrearRegistro"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" /> <!-- Visible -->

    <!-- RecyclerView para lista de contactos, centrado -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaContactos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/btnCrearRegistro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5" /> <!-- Centrado -->

    <!-- Botones ocultos -->
    <TextView
        android:id="@+id/tvSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSaludo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:visibility="gone" /> <!-- Oculto -->

    <Button
        android:id="@+id/btnSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSaludo"
        app:layout_constraintTop_toBottomOf="@+id/tvSaludo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:visibility="gone" /> <!-- Oculto -->

    <Button
        android:id="@+id/btnCrearDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCrearDb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSaludo"
        app:layout_constraintVertical_bias="0.102"
        android:visibility="gone" /> <!-- Oculto -->

</androidx.constraintlayout.widget.ConstraintLayout>
